--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,37 @@
 body {
     font-family: Arial, sans-serif;
     margin: 40px;
-    background-color: #f4f4f4;
+    background-color: #4e1414;
 }
 
 h1 {
-    color: #333;
+    color: #c5b9b9;
 }
 
 p {
-    color: #666;
+    color: #491818;
 }
+
+body {
+     
+    <nav>
+        background-color: rgba(59, 44, 10, 0.918);
+    }
+</style>
+
+ <header class="header">
+<div class="logo">
+  <h1 style="color: rgba(59, 23, 23, 0.863);"></h1> Meu Site</h1>
+</div>
+<nav class="menu">
+  <ul>
+    <li><a href="#">Página Inicial</a></li>
+    <li><a href="pagina.html">Sobre</a></li>
+    <li><a href="#">Contato</a></li>
+  </ul>
+</nav>
+<div class="header-info">
+  <p style="color: rgb(253, 251, 251);"></pstyle>>Projeto</p>
+  <a href="#" class="button">Saiba Mais</a>
+</div>
+</header>
