--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,18 @@ body {
     }
 </style>
 
+<style>
+    .container{
+      position: relative;
+      text-align: center;
+    }
+    .texto {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: rgb(56, 3, 3);
+      font-size: 44px;
+     font-family: 'Times New Roman', Times, serif;
+    }
+   </style>
