--- a/styles.css
+++ b/styles.css
@@ -11,59 +11,9 @@ h1 {
 body {
     font-family: Arial, sans-serif;
     margin: 40px;
-    background-color: #4e1414;
-}
-
-h1 {
-    color: #c5b9b9;
-}
-
-p {
-    color: #491818;
-}
-
+  
 body {
      
-    <nav>
-        background-color: rgba(59, 44, 10, 0.918);
-    }
-
-
-    .container{
-      position: relative;
-      text-align: center;
-    }
-    .texto {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: rgb(56, 3, 3);
-      font-size: 44px;
-     font-family: 'Times New Roman', Times, serif;
-    }
-
-p {
-    color: #491818;
+    <nav>       background-color: rgba(59, 44, 10, 0.918);
 }
 
-body {
-     
-    <nav>
-        background-color: rgba(59, 44, 10, 0.918);
-    }
-
-    .container{
-      position: relative;
-      text-align: center;
-    }
-    .texto {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: rgb(56, 3, 3);
-      font-size: 44px;
-     font-family: 'Times New Roman', Times, serif;
-    }
-   </style>
