--- a/styles.css
+++ b/styles.css
@@ -18,5 +18,5 @@ body {
 }
 
 body{
-    background-image: url(https://www.tibiabr.com/wp-content/uploads/2018/04/TrollFace.jpg
+    background-image: url(https://www.tibiabr.com/wp-content/uploads/2018/04/TrollFace.jpg);
    }     
